packages/domain/tests/fixtures/negative/browser-network.fixture.ts
void window;
void fetch;
void WebSocket;
